[project]
name = "pdf-toolkit-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard,stantard]>=0.136.1",
    "pypdf>=6.12.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.29",
    "ruff>=0.15.14",
    "weasyprint>=68.1",
]
